sqlite/conformance/sqlite-sqltests/snapshot_tests/analyze/snapshots/analyze__aggregate-after-analyze.snap
---
source: analyze.sqltest
expression: |-
  SELECT category, COUNT(*) as cnt, AVG(price) as avg_price
      FROM products
      GROUP BY category;
info:
  statement_type: SELECT
  tables:
  - products
  setup_blocks:
  - populated_products
  database: ':memory:'
---
QUERY PLAN
|--SCAN products
`--USE SORTER FOR GROUP BY

BYTECODE
addr  opcode                  p1  p2  p3  p4                p5  comment
   0          Init             0  47   0                     0  Start at 47
   1          Null             0   9  10                     0  r[9..10]=NULL
   2          SorterOpen       0   2   0  k(1,Binary)        0  cursor=0
   3          Integer          0   6   0                     0  r[6]=0; clear group by abort flag
   4          Null             0   7   0                     0  r[7]=NULL; initialize group by comparison registers to NULL
   5          Gosub           14  43   0                     0  ; go to clear accumulator subroutine
   6          OpenRead         2   2   0  k(6,B,B,B,B,B,B)   0  table=products, root=2, iDb=0
   7          Rewind           2  13   0                     0  Rewind table products
   8            ColumnRange    2   3  12  2                  0  r[12..13]=products.category..price
   9            RealAffinity  13   0   0                     0
  10            MakeRecord    12   2  11                     0  r[11]=mkrec(r[12..13])
  11            SorterInsert   0  11   0  0                  0  key=r[11]
  12          Next             2   8   0                     1
  13          OpenPseudo       1  11   2                     0  2 columns in r[11]
  14          SorterSort       0  30   0                     0
  15            SorterData     0  11   1                     0  r[11]=data
  16            Column         1   0  15                     0  r[15]=pseudo.column 0
  17            Compare        7  15   1  k(1, Binary)       0  r[7..7]==r[15..15]
  18            Jump          19  23  19                     0  ; start new group if comparison is not equal
  19            Gosub          4  34   0                     0  ; check if ended group had data, and output if so
  20            Move          15   7   1                     0  r[7..7]=r[15..15]
  21            IfPos          6  46   0                     0  r[6]>0 -> r[6]-=0, goto 46; check abort flag
  22            Gosub         14  43   0                     0  ; goto clear accumulator subroutine
  23            Column         1   1  16                     0  r[16]=pseudo.column 1
  24            AggStep        0  17   9  count              0  accum=r[9] step(r[17])
  25            AggStep        0  16  10  avg                0  accum=r[10] step(r[16])
  26            If             5  28   0                     0  if r[5] goto 28; don't emit group columns if continuing existing group
  27            Column         1   0   8                     0  r[8]=pseudo.column 0
  28            Integer        1   5   0                     0  r[5]=1; indicate data in accumulator
  29          SorterNext       0  15   0                     0
  30          Gosub            4  34   0                     0  ; emit row for final group
  31          Goto             0  46   0                     0  ; group by finished
  32          Integer          1   6   0                     0  r[6]=1
  33        Return             4   0   0                     0
  34        IfPos              5  36   0                     0  r[5]>0 -> r[5]-=0, goto 36; output group by row subroutine start
  35      Return               4   0   0                     0
  36      AggFinal             0   9   0  count              0  accum=r[9]
  37      AggFinal             0  10   0  avg                0  accum=r[10]
  38      Copy                 8   1   0                     0  r[1]=r[8]
  39      Copy                 9   2   0                     0  r[2]=r[9]
  40      Copy                10   3   0                     0  r[3]=r[10]
  41      ResultRow            1   3   0                     0  output=r[1..3]
  42    Return                 4   0   0                     0
  43    Null                   0   8  10                     0  r[8..10]=NULL; clear accumulator subroutine start
  44    Integer                0   5   0                     0  r[5]=0
  45  Return                  14   0   0                     0
  46  Halt                     0   0   0                     0
  47  Transaction              0   1   5                     0  iDb=0 tx_mode=Read
  48  Integer                  1  17   0                     0  r[17]=1
  49  Goto                     0   1   0                     0
