sqlite/conformance/sqlite-sqltests/snapshot_tests/analyze/snapshots/analyze__analyze-specific-index.snap
---
source: analyze.sqltest
expression: ANALYZE idx_products_sku;
info:
  statement_type: OTHER
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN


BYTECODE
addr  opcode       p1  p2  p3  p4                                               p5  comment
   0  Init          0  46   0                                                    0  Start at 46
   1  Null          0   1   0                                                    0  r[1]=NULL
   2  CreateBtree   0   2   1                                                    0  r[2]=root iDb=0 flags=1
   3  OpenWrite     0   1   0                                                    0  root=1; iDb=0
   4  NewRowid      0   3   0                                                    0  r[3]=rowid
   5  String8       0   4   0  table                                             0  r[4]='table'
   6  String8       0   5   0  sqlite_stat1                                      0  r[5]='sqlite_stat1'
   7  String8       0   6   0  sqlite_stat1                                      0  r[6]='sqlite_stat1'
   8  Copy          2   7   0                                                    0  r[7]=r[2]
   9  String8       0   8   0  CREATE TABLE sqlite_stat1(tbl,idx,stat)           0  r[8]='CREATE TABLE sqlite_stat1(tbl,idx,stat)'
  10  MakeRecord    4   5   9                                                    0  r[9]=mkrec(r[4..8])
  11  Insert        0   9   3  sqlite_stat1                                      0  intkey=r[3] data=r[9]
  12  ParseSchema   0   0   0  tbl_name = 'sqlite_stat1' AND type != 'trigger'   0  tbl_name = 'sqlite_stat1' AND type != 'trigger'
  13  SetCookie     0   1  10                                                    0
  14  OpenWrite     1   2   0                                                    0  root=2; iDb=0
  15  Rewind        1  24   0                                                    0  Rewind  sqlite_stat1
  16      Column    1   0  10                                                    0  r[10]=sqlite_stat1.tbl
  17      Ne       10  11  23                                                    0  if r[10]!=r[11] goto 23
  18      Column    1   1  12                                                    0  r[12]=sqlite_stat1.idx
  19      Ne       12  13  23                                                    0  if r[12]!=r[13] goto 23
  20      RowId     1  14   0                                                    0  r[14]=sqlite_stat1.rowid
  21      Delete    1   0   0  sqlite_stat1                                      0
  22    Next        1  16   0                                                    0
  23  Next          1  16   0                                                    0
  24  OpenRead      2   2   0  k(6,B,B,B,B,B,B)                                  0  =products, root=2, iDb=0
  25  OpenRead      3   3   0  k(2,B)                                            0  =idx_products_sku, root=3, iDb=0
  26  Integer       1  17   0                                                    0  r[17]=1
  27  Function      0  17  16  stat_init                                         0  r[16]=func(r[17])
  28  Rewind        3  45   0                                                    0  Rewind  idx_products_sku
  29  Integer       0  17   0                                                    0  r[17]=0
  30  Goto          0  36   0                                                    0
  31    Integer     0  17   0                                                    0  r[17]=0
  32    Column      3   0  19                                                    0  r[19]=idx_products_sku.sku
  33    Ne         19  18  36                                                    0  if r[19]!=r[18] goto 36
  34    Integer     1  17   0                                                    0  r[17]=1
  35    Goto        0  37   0                                                    0
  36    Column      3   0  18                                                    0  r[18]=idx_products_sku.sku
  37    Function    0  16  16  stat_push                                         0  r[16]=func(r[16..17])
  38  Next          3  31   0                                                    0
  39  Function      0  16  20  stat_get                                          0  r[20]=func(r[16])
  40  IsNull       20  45   0                                                    0  if (r[20]==NULL) goto 45
  41  Copy         20  23   0                                                    0  r[23]=r[20]
  42  MakeRecord   21   3  24                                                    0  r[24]=mkrec(r[21..23])
  43  NewRowid      1  25   0                                                    0  r[25]=rowid
  44  Insert        1  24  25  sqlite_stat1                                      0  intkey=r[25] data=r[24]
  45  Halt          0   0   0                                                    0
  46  Transaction   0   2   9                                                    0  iDb=0 tx_mode=Write
  47  String8       0  11   0  products                                          0  r[11]='products'
  48  String8       0  13   0  idx_products_sku                                  0  r[13]='idx_products_sku'
  49  String8       0  15   0  products                                          0  r[15]='products'
  50  String8       0  21   0  products                                          0  r[21]='products'
  51  String8       0  22   0  idx_products_sku                                  0  r[22]='idx_products_sku'
  52  Goto          0   1   0                                                    0
