sqlite/conformance/sqlite-sqltests/snapshot_tests/analyze/snapshots/analyze__join-after-analyze.snap
---
source: analyze.sqltest
expression: |-
  SELECT c.name, p.amount
      FROM customers c
      JOIN purchases p ON c.id = p.customer_id
      WHERE c.id = 2;
info:
  statement_type: SELECT
  tables:
  - c.id
  - customers
  - purchases
  setup_blocks:
  - join_tables
  database: ':memory:'
---
QUERY PLAN
|--SEARCH c USING INTEGER PRIMARY KEY (rowid=?)
`--SCAN purchases AS p

BYTECODE
addr  opcode          p1  p2  p3  p4          p5  comment
   0  Init             0  14   0               0  Start at 14
   1  OpenRead         0   2   0  k(2,B,B)     0  table=customers, root=2, iDb=0
   2  OpenRead         1   3   0  k(3,B,B,B)   0  table=purchases, root=3, iDb=0
   3  SeekRowid        0   3  13               0  if (r[3]!=cursor 0 for table customers.rowid) goto 13
   4  Rewind           1  13   0               0  Rewind table purchases
   5    RowId          0   5   0               0  r[5]=customers.rowid
   6    Column         1   1   6               0  r[6]=purchases.customer_id
   7    Ne             5   6  12  Binary       0  if r[5]!=r[6] goto 12
   8    Column         0   1   1               0  r[1]=customers.name
   9    Column         1   2   2               0  r[2]=purchases.amount
  10    RealAffinity   2   0   0               0
  11    ResultRow      1   2   0               0  output=r[1..2]
  12  Next             1   5   0               0
  13  Halt             0   0   0               0
  14  Transaction      0   1   4               0  iDb=0 tx_mode=Read
  15  Integer          2   3   0               0  r[3]=2
  16  Goto             0   1   0               0
